@@ -1,10 +1,6 @@
-FROM gradle:8.14.3-jdk17 AS builder
+FROM eclipse-temurin:21-jre-alpine as base
 WORKDIR /app
-COPY . .
-RUN gradle clean installDist
-
-FROM eclipse-temurin:17-jre
-WORKDIR /app
-COPY --from=builder /app/build/install/rinha-backend/ .
+COPY build/libs/*.jar app.jar
+ENV JAVA_OPTS="-XX:+UseZGC -XX:+AlwaysPreTouch -XX:+UseNUMA -XX:+UnlockExperimentalVMOptions -XX:+UseContainerSupport -XX:MaxRAMPercentage=80 -XX:InitialRAMPercentage=80 -XX:MinRAMPercentage=80 -XX:+DisableExplicitGC -XX:+PerfDisableSharedMem -XX:+ParallelRefProcEnabled -XX:MaxInlineLevel=15 -XX:MaxInlineSize=1024 -XX:InlineSmallCode=1024 -XX:ThreadStackSize=512 -XX:+AggressiveOpts -XX:+OptimizeStringConcat -XX:+UseFastAccessorMethods -XX:+UseStringDeduplication -XX:+UseCompressedOops -XX:+UseCompressedClassPointers -XX:+ExitOnOutOfMemoryError -XX:ActiveProcessorCount=2"
 EXPOSE 9999
-CMD ["bin/rinha-backend"]
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
